
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
SuRun 1.2.0.9 Beta14 - 2010-08-04
---------------------------------
* If CreateProcessAsUser fails, SuRun's service impersonates first as Admin 
  and if that fails too, it impersonates as logged on user

SuRun 1.2.0.9 Beta13 - 2010-07-21
---------------------------------
* SuRun's service tries to impersonate the user on ERROR_INVALID_PASSWORD

SuRun 1.2.0.9 Beta12 - 2010-06-30
---------------------------------
* SuRuns Context Menu Extension add it's items only once. When righ clicking 
  the folder tree in Win7 Explorer calls the extension twice, one time for the 
  folder and one time for the folder background.
* IAT-Hook explicitly loads SuRunExt.dll to avoid unloading the Dll too early.
  In Win7 x64 a call to LoadLibW() in Unloaded_SuRunExt.dll GPFed.

SuRun 1.2.0.9 Beta11 - 2010-06-28
---------------------------------
* Windows 7 Explorer can be launched with admin rights by cheating the registry
  (AppID\\{CDCBCFCA-3CDC-436f-A4E2-0E02075250C2}","RunAs") THANKS to Junne!!!
* SuRunExtDll export functions wait for Initproc to be done

SuRun 1.2.0.9 Beta10 - 2010-01-12
---------------------------------
* FIX: SuRuns second service instance did not realize if the client process 
    has admin rights and thus it asked the user to become a SuRunners member.

SuRun 1.2.0.9 Beta 9 - 2010-01-11
---------------------------------
* NEW: Local System is accepted as user for Backup/Restore
* NEW: If "Start the program automagically with elevated rights." and "NEVER 
  start this program with elevated rights." are both checked, SuRuns Hooks 